--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header>
         <div class="container header-info">
             <a href="#" class="logo">
-                <img src="image/cupcake-down.png" width="150px" height="35px" alt="">
+                <img src="logo.png" width="150px" height="35px" alt="">
             </a>
             <div class="contacts">
-                <a href="#"> <img src="/image/phone.png" alt=""> 063 22 30 157</a>
-                <a href="#"> <img src="/image/telegram.png" alt=""> kat_danylo </a>
-                <a href="#"> <img src="/image/viber.png" alt=""> 063 22 30 157</a>
+                <a href="#"> <img src="phone.png" alt=""> 063 22 30 157</a>
+                <a href="#"> <img src="telegram.png" alt=""> kat_danylo </a>
+                <a href="#"> <img src="viber.png" alt=""> 063 22 30 157</a>
                 <button class="btn header-btn">Зворотній зв'язок</button>
             </div>
         </div>
